statum-macros/tests/ui/invalid_machine_no_state_generic.stderr
error: Error: #[machine] structs must declare exactly one generic type parameter naming the #[state] enum.

       Fix: declare `Machine` like `pub struct Machine<State> { ... }`.
 --> tests/ui/invalid_machine_no_state_generic.rs:8:1
  |
8 | #[machine]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_no_state_generic.rs:11:2
   |
11 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_no_state_generic.rs`
