statum-macros/tests/ui/invalid_machine_no_state_generic.rs
extern crate statum_macros;
use statum_macros::machine;

#[machine]
struct Machine<T> {
    client: String,
}
